# calculator

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
